test/regress/ext:gc/br_on_non_null0.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\90\80\80\80\00\03\60"
    "\00\00\60\01\63\00\01\70\60\01\70\02\70\70\03\83"
    "\80\80\80\00\02\01\02\0a\9b\80\80\80\00\02\84\80"
    "\80\80\00\00\20\00\0b\8c\80\80\80\00\00\d0\00\20"
    "\00\d6\00\10\00\20\00\0b"
  )
  "type mismatch"
)
